tests/specs/node/error_stack_internal_frames/thrown.out
error: Uncaught Error: ENOENT: no such file or directory, open '/non/existent/file'
  readFileSync("/non/existent/file");
  ^
    at readFileSync (ext:deno_node/_fs/_fs_readFile.ts:[WILDCARD])
    at [WILDCARD]thrown.ts:5:3
    at Array.processTicksAndRejections (ext:deno_node/_next_tick.ts:[WILDCARD])
